track udpate tim height, and store haahs on storage
