# swagger-gen/dysonprotocol/storage/v1/query.swagger.json
@@ -207,6 +207,19 @@
         "data": {
           "type": "string",
           "description": "data is the stored string value associated with the index."
+        },
+        "updated_height": {
+          "type": "string",
+          "format": "uint64",
+          "description": "updated_height is block height of last modification."
+        },
+        "updated_timestamp": {
+          "type": "string",
+          "description": "updated_timestamp is the block time in UTC (RFC3339 e.g.\n\"2025-06-11T15:23:00Z\") when entry was modified."
+        },
+        "hash": {
+          "type": "string",
+          "description": "hash is SHA-256 hex of data field."
         }
       }
     },
