# x/storage/types/storage.pb.go
@@ -37,6 +37,13 @@ type Storage struct {
 	Index string `protobuf:"bytes,2,opt,name=index,proto3" json:"index,omitempty"`
 	// data is the stored string value associated with the index.
 	Data string `protobuf:"bytes,3,opt,name=data,proto3" json:"data,omitempty"`
+	// updated_height is block height of last modification.
+	UpdatedHeight uint64 `protobuf:"varint,4,opt,name=updated_height,json=updatedHeight,proto3" json:"updated_height,omitempty"`
+	// updated_timestamp is the block time in UTC (RFC3339 e.g.
+	// "2025-06-11T15:23:00Z") when entry was modified.
+	UpdatedTimestamp string `protobuf:"bytes,5,opt,name=updated_timestamp,json=updatedTimestamp,proto3" json:"updated_timestamp,omitempty"`
+	// hash is SHA-256 hex of data field.
+	Hash string `protobuf:"bytes,6,opt,name=hash,proto3" json:"hash,omitempty"`
 }
 
 func (m *Storage) Reset()         { *m = Storage{} }
@@ -93,6 +100,27 @@ func (m *Storage) GetData() string {
 	return ""
 }
 
+func (m *Storage) GetUpdatedHeight() uint64 {
+	if m != nil {
+		return m.UpdatedHeight
+	}
+	return 0
+}
+
+func (m *Storage) GetUpdatedTimestamp() string {
+	if m != nil {
+		return m.UpdatedTimestamp
+	}
+	return ""
+}
+
+func (m *Storage) GetHash() string {
+	if m != nil {
+		return m.Hash
+	}
+	return ""
+}
+
 func init() {
 	proto.RegisterType((*Storage)(nil), "dysonprotocol.storage.v1.Storage")
 }
@@ -102,26 +130,30 @@ func init() {
 }
 
 var fileDescriptor_c1642448e4e30a9e = []byte{
-	// 298 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x54, 0x91, 0x4f, 0x4a, 0xc4, 0x30,
-	0x14, 0xc6, 0x5b, 0x75, 0x14, 0xbb, 0xb3, 0x74, 0x51, 0x07, 0x89, 0x7f, 0x16, 0x22, 0x82, 0x7d,
-	0x14, 0x97, 0xae, 0x9c, 0x23, 0xcc, 0xec, 0xdc, 0x48, 0xda, 0xc6, 0x10, 0x98, 0xe6, 0xd5, 0x24,
-	0x53, 0xa7, 0xb7, 0xf0, 0x30, 0x1e, 0xc2, 0xe5, 0xe0, 0xca, 0xa5, 0xb4, 0x17, 0x91, 0x49, 0x52,
-	0x71, 0x36, 0xe1, 0x7d, 0xef, 0xfb, 0xc1, 0x8f, 0x24, 0xd1, 0x75, 0xd5, 0x69, 0x94, 0x8d, 0x42,
-	0x83, 0x25, 0x2e, 0x41, 0x1b, 0x54, 0x94, 0x33, 0x68, 0xf3, 0x71, 0xcc, 0x6c, 0x17, 0xa7, 0x3b,
-	0x5c, 0x36, 0x96, 0x6d, 0x3e, 0x4d, 0x38, 0x72, 0xb4, 0x05, 0x6c, 0x27, 0xc7, 0x4f, 0xcf, 0x38,
-	0x22, 0x5f, 0x32, 0xa0, 0x8d, 0x00, 0x2a, 0x25, 0x1a, 0x6a, 0x04, 0x4a, 0xed, 0xdb, 0xdb, 0x12,
-	0x75, 0x8d, 0x1a, 0x0a, 0xaa, 0x19, 0xbc, 0xae, 0x98, 0xea, 0xa0, 0xcd, 0x0b, 0x66, 0x68, 0x0e,
-	0x0d, 0xe5, 0x42, 0x5a, 0xd8, 0xb3, 0xa7, 0x8e, 0x7d, 0x76, 0x0a, 0x17, 0x7c, 0x75, 0x42, 0x6b,
-	0x21, 0x11, 0xec, 0xe9, 0x57, 0xe7, 0xde, 0x6b, 0x53, 0xb1, 0x7a, 0x01, 0x23, 0x6a, 0xa6, 0x0d,
-	0xad, 0x1b, 0x0f, 0x90, 0xff, 0xea, 0x51, 0x5a, 0xa2, 0xf0, 0xba, 0xab, 0x32, 0x3a, 0x5a, 0xb8,
-	0xcb, 0xc5, 0x59, 0x34, 0xc1, 0x37, 0xc9, 0x54, 0x1a, 0x5e, 0x84, 0x37, 0xc7, 0xb3, 0xf4, 0xeb,
-	0xe3, 0x2e, 0xf1, 0xfe, 0xc7, 0xaa, 0x52, 0x4c, 0xeb, 0x85, 0x51, 0x42, 0xf2, 0xb9, 0xc3, 0xe2,
-	0x24, 0x9a, 0x08, 0x59, 0xb1, 0x75, 0xba, 0xb7, 0xe5, 0xe7, 0x2e, 0xc4, 0x71, 0x74, 0x50, 0x51,
-	0x43, 0xd3, 0x7d, 0xbb, 0xb4, 0xf3, 0xec, 0xe1, 0xb3, 0x27, 0xe1, 0xa6, 0x27, 0xe1, 0x4f, 0x4f,
-	0xc2, 0xf7, 0x81, 0x04, 0x9b, 0x81, 0x04, 0xdf, 0x03, 0x09, 0x9e, 0x2e, 0x77, 0xdf, 0xb9, 0xc4,
-	0x1a, 0xd6, 0x7f, 0xbf, 0x62, 0xba, 0x86, 0xe9, 0xe2, 0xd0, 0xb6, 0xf7, 0xbf, 0x01, 0x00, 0x00,
-	0xff, 0xff, 0x3f, 0xa8, 0x9b, 0x7c, 0xbb, 0x01, 0x00, 0x00,
+	// 357 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x54, 0x91, 0xc1, 0x4a, 0x2b, 0x31,
+	0x14, 0x86, 0x3b, 0xf7, 0xb6, 0xbd, 0xdc, 0x81, 0x7b, 0xb1, 0x43, 0x17, 0xb1, 0x48, 0xac, 0x82,
+	0x52, 0x14, 0x1b, 0x06, 0x97, 0xae, 0xec, 0xca, 0x75, 0xeb, 0xca, 0x4d, 0xc9, 0x4c, 0x62, 0x26,
+	0xd0, 0xc9, 0x19, 0x27, 0x69, 0x6d, 0xdf, 0xc2, 0x87, 0xf1, 0x21, 0x04, 0x37, 0xc5, 0x95, 0x4b,
+	0x69, 0x5f, 0x44, 0x26, 0xc9, 0x14, 0xbb, 0x19, 0xfe, 0xf3, 0xff, 0x1f, 0xf3, 0xe7, 0x70, 0xc2,
+	0x73, 0xb6, 0xd2, 0xa0, 0x8a, 0x12, 0x0c, 0xa4, 0x30, 0x23, 0xda, 0x40, 0x49, 0x05, 0x27, 0x8b,
+	0xb8, 0x96, 0x43, 0x9b, 0x45, 0x68, 0x8f, 0x1b, 0xd6, 0xe1, 0x22, 0xee, 0x75, 0x05, 0x08, 0xb0,
+	0x01, 0xa9, 0x94, 0xe3, 0x7b, 0x47, 0x02, 0x40, 0xcc, 0x38, 0xa1, 0x85, 0x24, 0x54, 0x29, 0x30,
+	0xd4, 0x48, 0x50, 0xda, 0xa7, 0x17, 0x29, 0xe8, 0x1c, 0x34, 0x49, 0xa8, 0xe6, 0xe4, 0x69, 0xce,
+	0xcb, 0x15, 0x59, 0xc4, 0x09, 0x37, 0x34, 0x26, 0x05, 0x15, 0x52, 0x59, 0xd8, 0xb3, 0x87, 0x8e,
+	0x9d, 0xba, 0x0a, 0x37, 0xf8, 0xa8, 0x43, 0x73, 0xa9, 0x80, 0xd8, 0xaf, 0xb7, 0x8e, 0x7d, 0xaf,
+	0x9d, 0x92, 0xf9, 0x23, 0x31, 0x32, 0xe7, 0xda, 0xd0, 0xbc, 0xf0, 0x00, 0xfe, 0x59, 0x5d, 0x97,
+	0xa6, 0x20, 0x7d, 0xdd, 0xe9, 0x7b, 0x10, 0xfe, 0x99, 0xb8, 0xed, 0xa2, 0x61, 0xd8, 0x82, 0x67,
+	0xc5, 0x4b, 0x14, 0xf4, 0x83, 0xc1, 0xdf, 0x11, 0xfa, 0x78, 0xbd, 0xea, 0xfa, 0x07, 0xdc, 0x32,
+	0x56, 0x72, 0xad, 0x27, 0xa6, 0x94, 0x4a, 0x8c, 0x1d, 0x16, 0x75, 0xc3, 0x96, 0x54, 0x8c, 0x2f,
+	0xd1, 0xaf, 0x8a, 0x1f, 0xbb, 0x21, 0x8a, 0xc2, 0x26, 0xa3, 0x86, 0xa2, 0xdf, 0xd6, 0xb4, 0x3a,
+	0x3a, 0x0b, 0xff, 0xcf, 0x0b, 0x46, 0x0d, 0x67, 0xd3, 0x8c, 0x4b, 0x91, 0x19, 0xd4, 0xec, 0x07,
+	0x83, 0xe6, 0xf8, 0x9f, 0x77, 0xef, 0xac, 0x19, 0x5d, 0x86, 0x9d, 0x1a, 0xdb, 0xed, 0x81, 0x5a,
+	0xf6, 0x3f, 0x07, 0x3e, 0xb8, 0xaf, 0xfd, 0xaa, 0x27, 0xa3, 0x3a, 0x43, 0x6d, 0xd7, 0x53, 0xe9,
+	0xd1, 0xcd, 0xdb, 0x06, 0x07, 0xeb, 0x0d, 0x0e, 0xbe, 0x36, 0x38, 0x78, 0xd9, 0xe2, 0xc6, 0x7a,
+	0x8b, 0x1b, 0x9f, 0x5b, 0xdc, 0x78, 0x38, 0xd9, 0x3f, 0x68, 0x0a, 0x39, 0x59, 0xee, 0xce, 0x6f,
+	0x56, 0x05, 0xd7, 0x49, 0xdb, 0xa6, 0xd7, 0xdf, 0x01, 0x00, 0x00, 0xff, 0xff, 0xb3, 0x0d, 0xb5,
+	0x15, 0x24, 0x02, 0x00, 0x00,
 }
 
 func (m *Storage) Marshal() (dAtA []byte, err error) {
@@ -144,6 +176,25 @@ func (m *Storage) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if len(m.Hash) > 0 {
+		i -= len(m.Hash)
+		copy(dAtA[i:], m.Hash)
+		i = encodeVarintStorage(dAtA, i, uint64(len(m.Hash)))
+		i--
+		dAtA[i] = 0x32
+	}
+	if len(m.UpdatedTimestamp) > 0 {
+		i -= len(m.UpdatedTimestamp)
+		copy(dAtA[i:], m.UpdatedTimestamp)
+		i = encodeVarintStorage(dAtA, i, uint64(len(m.UpdatedTimestamp)))
+		i--
+		dAtA[i] = 0x2a
+	}
+	if m.UpdatedHeight != 0 {
+		i = encodeVarintStorage(dAtA, i, uint64(m.UpdatedHeight))
+		i--
+		dAtA[i] = 0x20
+	}
 	if len(m.Data) > 0 {
 		i -= len(m.Data)
 		copy(dAtA[i:], m.Data)
@@ -194,6 +245,17 @@ func (m *Storage) Size() (n int) {
 		n += 1 + l + sovStorage(uint64(l))
 	}
 	l = len(m.Data)
+	if l > 0 {
+		n += 1 + l + sovStorage(uint64(l))
+	}
+	if m.UpdatedHeight != 0 {
+		n += 1 + sovStorage(uint64(m.UpdatedHeight))
+	}
+	l = len(m.UpdatedTimestamp)
+	if l > 0 {
+		n += 1 + l + sovStorage(uint64(l))
+	}
+	l = len(m.Hash)
 	if l > 0 {
 		n += 1 + l + sovStorage(uint64(l))
 	}
@@ -330,6 +392,89 @@ func (m *Storage) Unmarshal(dAtA []byte) error {
 				return io.ErrUnexpectedEOF
 			}
 			m.Data = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
+		case 4:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field UpdatedHeight", wireType)
+			}
+			m.UpdatedHeight = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowStorage
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.UpdatedHeight |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		case 5:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field UpdatedTimestamp", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowStorage
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthStorage
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthStorage
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.UpdatedTimestamp = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
+		case 6:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Hash", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowStorage
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthStorage
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthStorage
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.Hash = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
 		default:
 			iNdEx = preIndex
